Wed Mar 28 21:39:26 2001  Darrell Brunsch <brunsch@uci.edu>

        * ace/NT_Service.h:

          Changed the ACE_NT_SERVICE macros to use ACE_TEXT_* API
          calls for those that can take in unicode strings.

        * examples/NT_Service/main.cpp:

          Fixed use of ACE_NT_SERVICE to work with ACE_USES_WCHAR.

        * examples/OS/Process/process.cpp:
        * examples/Reactor/WFMO_Reactor/test_directory_changes.cpp:

          Changed some Win32 API calls to use ACE_TEXT_* equivalents.

        * ace/ace_wchar.h:

          Added all the ACE_TEXT_* API macros needed above.

          Thanks to Nick Pratt <npratt@microstrategy.com> for 
          reporting the first of these errors.

Wed Mar 28 22:07:03 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/tests.dsw: Fixed project dependencies between DLL_Test and
	  DLL_Test_Impl.  Thanks to Alain Decamps <Alain.Decamps@PIDPA.be>
	  for reporting this.

Wed Mar 28 20:33:28 2001  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* ace/ACE.cpp: Further improved the implementation of
	  handle_ready() by simply calling poll() with the timeout
 	  pointer.  Thanks to Przemyslaw Marciniak <pmarciniak@lucent.com>
 	  for reporting this.

Wed Mar 28 17:45:22 2001  Steve Huston  <shuston@riverace.com>

        * bin/make_pretty.pl: Adjust the error detector for IBM C/C++ 3.6.6.

        * ace/Containers_T.cpp: Add #include "ace/Log_Msg.h" so IBM C/C++
          can see ACE_DEBUG when compiling template instantiations.

Wed Mar 28 16:40:24 2001  Luther Baker  <luther@cs.wustl.edu>

	* ace/config-all.h

	  Removed ACE_WIN32 support for ACE_HAS_POSIX_SEM just because
	  ACE_HAS_PACE. This can be defined for ACE_WIN32 after we
 	  write more WIN32 emulation.

	* ace/OS.h
	* ace/OS.i
	* ace/OS.cpp

	  PACE updates.

Wed Mar 28 11:37:09 2001  Fuzz Master D <brunsch@uci.edu>

        * bin/fuzz.pl:

          There are several instances where fuzz gives false